# python_object_oriented_programming

./: .gitignore  NorwegianBlue.py  README.md  archive_tweaker.py  audio_file.py  average_list.py  circle.py  collection_data_structures.py  color.py  contact.py  diamond_inheritance.py  diamond_inheritance_s.py  dice.py  dict_ext.py  functions.py  lists.py  lookup_mapping.py  main.py  perimeter_functional.py  perimeter_oop.py  pyproject.toml  singleton_pattern_examples.py  singleton_pattern_guide.md  test.py  text_tweaker.py  webpage.py
ch10/: analyze_directory_sizes.py  extract_and_parse_d.py  extract_and_parse_g.py  extract_and_parse_g1.py  extract_and_parse_g2.py  extract_and_parse_g3.py  extract_and_parse_g4.py  iterator_protocol.py  log_analysis.py  log_sample.py  warning_format.py  warnings_filters.py
ch11/: adapter_pattern_examples.py  atm_machine_conditional.py  attrgetter.py  command_database_design_pattern.py  decorators.py  dice.py  dice_improvements_summary.md  dice_server.py  facade_pattern_examples.py  flyweight_pattern_examples.py  inventory.py  itemgetter.py  metaclass_orm.py  methodcaller_examples.py  protocols_vs_abc.py  singleton_demo.py  singleton_pattern_examples.py  socket_client.py  socket_server.py  state_pattern_examples.py  strategy_fn.py  strategy_oo.py  test_dice.py  test_inventory.py  test_metaclass_orm.py
ch12/: abstract_factory_pattern_examples.py  age_computation.py  car_sales.py  card_games.py  composite_pattern_examples.py  file_system.py  flyweight_pattern_examples.py  gps_message_slots.py  gps_messages.py  run_tests.py  (+2 more)
(+66 files in other folders)
